# snappy

./: .gitignore  README.md  app.json  docker-compose.yml  package-lock.json  package.json
app/: _layout.tsx
app/(modal)/: ImagesModal.tsx
app/(tabs)/: _layout.tsx
app/screens/: BalanceScreen.tsx  LoginScreen.tsx  SelectInterestScreen.tsx
app/settingscreen/: Dev_localstorage.tsx  NotificationScreen.tsx  PermissionScreen.tsx  SelectLanguageScreen.tsx  SettingScreen.tsx  ZustandDevScreen.tsx  _layout.tsx
assets/: index.ts
backend/: .coverage  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: .env  conftest.py  main.py  test_router.py
backend/app/internal/: models.py
backend/app/routers/: album.py  auth.py  chat.py  license.py  photo.py  user.py
backend/app/utils/: auth.py  debug.py  generate_mock_data.py  minio.py  minio_server.py  mongo.py  settings.py
backend/routers/: user.py
backend/tests/: conftest.py  test_album.py  test_chat.py  test_photo.py  test_user.py
components/: Bounceable.tsx  Dot.tsx  ExpandibleRow.tsx  Pagination.tsx  SelectedFileAnimation.tsx  SwipeableRow.tsx
components/bottomsheetUI/: BlurredHandle.tsx  index.ts
components/cards/: InterestCard.tsx  RateJobCard.tsx  SavedJobCard.tsx
components/chat/: ChatRow.tsx  chat.audio.tsx  chat.images.tsx
components/headers/: ListHeader.tsx  ScreenHeaderBtn.tsx  (+2 more)
constants/: constants.ts
frontend/: .env  app.json  package-lock.json  package.json
hooks/: useChatStore.ts  useStorageStore.ts
scripts/: register-assets.js
types/: chats.type.ts
utils/: utils.ts
(+173 files in other folders)
